message NewBlockMessage {
  required string id = 1;
  required int64 height = 2;
  required string prevBlockId = 3;
}

message Block {
  required int32 version = 1;
  required int32 timestamp = 2;
  required int64 totalAmount = 3;
  required int64 totalFee = 4;
  required int64 reward = 5;
  required int32 numberOfTransactions = 6;
  required int32 payloadLength = 7;
  required bytes payloadHash = 8;
  required bytes generatorPublicKey = 9;
  optional bytes blockSignature = 10;
  optional string previousBlock = 11;
  optional string id = 12;
  optional int64 height = 13;
  repeated Transaction transactions = 14;
}

message Transaction {
  required int32 type = 1;
  required int32 timestamp = 2;
  required bytes senderPublicKey = 3;
  required bytes signatures = 4;
  optional string senderId = 5;
  optional int64 fee = 6;
  optional bytes secondSignature = 7;
  optional string id = 8;
  optional int64 height = 9;
  repeated bytes args = 10;
  optional string message = 11;
}

message BlockPropose {
  required int64 height = 1;
  required string id = 2;
  required int32 timestamp = 3;
  required bytes generatorPublicKey = 4;
  required string address = 5;
  required bytes hash = 6;
  required bytes signature = 7;
}

message BlockVotes {
  required int64 height = 1;
  required string id = 2;
  repeated BlockVoteSignature signatures = 3;
}

message BlockVoteSignature {
  required bytes publicKey = 1;
  required bytes signature = 2;
}